start on endpoints
